syntax = "proto3";

package auth;

option go_package = "github.com/tunvx/simplebank/grpc/pb/auth";

message CreateCustomerCredentialRequest {
    int64  customer_id = 1;
    int32  shard_id = 2;
    string username = 3;
    string password = 4;
}

message CreateCustomerCredentialResponse {
    bool is_created = 1;
}